background layout bug on mobile #15

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,19 +10,30 @@
 
 /* background image */
 body {
+  /* background-image: url("../resources/background.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100vw 100vh; */
   font-family: pokemonFontSolid;
 }
 
-.background_wrap {
-  z-index: -1;
+.bg {
+  background: linear-gradient(335deg, rgba(255,140,107,1) 0%, rgba(255,228,168,1) 100%);
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+  width: 100vw;
   position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-size: 100vw 100vh;
-  background-image: url("../resources/background.jpg");
-  background-attachment: fixed;
+  /* z-index usage is up to you.. although there is no need of using it because the default stack context will work. */
+  z-index: -1; // this is optional
+}
+
+.content{
+  position: absolute;
+  margin-top: 5rem;
+  left: 50%; 
+  transform: translateX(-50%);
+  width: 80%;
 }
 
 .navbar {
@@ -122,6 +133,4 @@ li {
 /* fixed navbar hides list-group, so we need a margin-top to make them visible */
 .page-container {
   margin-top: 75px; 
-  position: relative;
-  z-index: 1;
 }
